--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,3 +1,8 @@
+dialog {
+  --pico-modal-overlay-background-color: transparent;
+  --pico-modal-overlay-backdrop-filter: none;
+}
+
 .image-only-button {
   padding: 3px 10px 3px 10px;
 }
