--- a/frontend/src/pages/admin/Registration.css
+++ b/frontend/src/pages/admin/Registration.css
@@ -9,19 +9,7 @@ td {
   padding: 8px;
 }
 
-th {
+th,
+tr {
   cursor: pointer;
-}
-
-tr:hover {
-  background-color: #f1f1f1;
-}
-
-.tooltip {
-  position: fixed;
-  background-color: white;
-  border: 1px solid #ddd;
-  padding: 8px;
-  z-index: 1;
-  pointer-events: none;
 }
