--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,3 +1,12 @@
+@font-face {
+  font-family: 'Lato';
+  src: url('/fonts/Lato-Regular.ttf') format('truetype');
+}
+
+body {
+  font-family: 'Lato', sans-serif;
+}
+
 dialog {
   --pico-modal-overlay-background-color: transparent;
   --pico-modal-overlay-backdrop-filter: none;
