--- a/frontend/src/pages/Register.css
+++ b/frontend/src/pages/Register.css
@@ -1,3 +1,23 @@
+html, body {
+  width: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+.exhibitor-registration {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+}
+
+.exhibitor-registration fieldset {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 100%;
+}
+
 form.exhibitor-registration fieldset {
   border: 1px solid #ccc;
   padding: 1em;
