--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -34,3 +34,11 @@ nav form {
   color: #e57373;
   min-height: 1.5em;
 }
+
+fieldset {
+  margin-bottom: 3em;
+}
+
+legend {
+  font-size: 1.5em;
+}
