Fonts nicht von Google Fonts laden

--- a/frontend/src/pages/Register.css
+++ b/frontend/src/pages/Register.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
+@import '../styles/fonts/press-start-2p.css';
 
 html,
 body {
