--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,7 +1,4 @@
-@font-face {
-  font-family: 'Lato';
-  src: url('/fonts/Lato-Regular.ttf') format('truetype');
-}
+@import './styles/fonts/lato.css';
 
 body {
   font-family: 'Lato', sans-serif;
