--- a/frontend/src/styles/fonts/lato.css
+++ b/frontend/src/styles/fonts/lato.css
@@ -81,8 +81,8 @@
 @font-face {
   font-family: 'Lato';
   src:
-    url('/fonts/Lato-Thin.woff2') format('woff2'),
-    url('/fonts/Lato-Thin.woff') format('woff');
+    url('/fonts/Lato-Hairline.woff2') format('woff2'),
+    url('/fonts/Lato-Hairline.woff') format('woff');
   font-weight: 100;
   font-style: normal;
   font-display: swap;
@@ -91,8 +91,8 @@
 @font-face {
   font-family: 'Lato';
   src:
-    url('/fonts/Lato-ThinItalic.woff2') format('woff2'),
-    url('/fonts/Lato-ThinItalic.woff') format('woff');
+    url('/fonts/Lato-HairlineItalic.woff2') format('woff2'),
+    url('/fonts/Lato-HairlineItalic.woff') format('woff');
   font-weight: 100;
   font-style: italic;
   font-display: swap;
