--- a/frontend/src/components/Card.css
+++ b/frontend/src/components/Card.css
@@ -107,7 +107,8 @@
 }
 
 .button-image[src='/edit.svg'],
-.button-image[src='/delete.svg'] {
+.button-image[src='/delete.svg'],
+.button-image[src='/pdf.svg'] {
   width: 35px;
   height: 35px;
   padding: 2px;
