style server html content

--- a/frontend/src/components/ServerHtmlContent.module.css
+++ b/frontend/src/components/ServerHtmlContent.module.css
@@ -1,5 +1,5 @@
 .serverHtmlContent {
-  /* This class will be used to scope all styles within the server-rendered HTML content */
+  /* Reset and base styles */
   all: initial;
   display: block;
   font-family: inherit;
@@ -7,27 +7,101 @@
   color: inherit;
 }
 
-/* Add any additional scoped styles you need here */
+/* Headings */
 .serverHtmlContent h1,
-.serverHtmlContent h2,
-.serverHtmlContent h3,
-.serverHtmlContent h4,
-.serverHtmlContent h5,
-.serverHtmlContent h6 {
+.serverHtmlContent h2 {
   margin-top: 1.5em;
   margin-bottom: 0.5em;
+  font-weight: 600;
+  line-height: 1.25;
 }
 
+.serverHtmlContent h1 {
+  font-size: 2em;
+}
+
+.serverHtmlContent h2 {
+  font-size: 1.5em;
+}
+
+/* Lists */
+.serverHtmlContent ul,
+.serverHtmlContent ol {
+  margin: 1em 0;
+  padding-left: 2em;
+}
+
+.serverHtmlContent ul {
+  list-style-type: disc;
+}
+
+.serverHtmlContent li {
+  margin: 0.5em 0;
+}
+
+/* Text formatting */
 .serverHtmlContent p {
   margin-bottom: 1em;
 }
 
+.serverHtmlContent strong {
+  font-weight: 600;
+}
+
+.serverHtmlContent em,
+.serverHtmlContent i {
+  font-style: italic;
+}
+
+/* Links */
 .serverHtmlContent a {
   color: inherit;
   text-decoration: underline;
 }
 
+.serverHtmlContent a:hover {
+  opacity: 0.8;
+}
+
+/* Images */
 .serverHtmlContent img {
   max-width: 100%;
   height: auto;
+  display: block;
+  margin: 1em 0;
+}
+
+/* Code blocks */
+.serverHtmlContent code {
+  font-family: monospace;
+  background-color: rgba(0, 0, 0, 0.05);
+  padding: 0.2em 0.4em;
+  border-radius: 3px;
+}
+
+.serverHtmlContent pre {
+  background-color: rgba(0, 0, 0, 0.05);
+  padding: 1em;
+  border-radius: 4px;
+  overflow-x: auto;
+  margin: 1em 0;
+}
+
+.serverHtmlContent pre code {
+  background-color: transparent;
+  padding: 0;
+}
+
+/* Blockquotes */
+.serverHtmlContent blockquote {
+  margin: 1em 0;
+  padding-left: 1em;
+  border-left: 4px solid rgba(0, 0, 0, 0.1);
+}
+
+/* Horizontal rule */
+.serverHtmlContent hr {
+  border: none;
+  border-top: 1px solid rgba(0, 0, 0, 0.1);
+  margin: 2em 0;
 }
